<resources>


    <!--photos api key-->
    <string name="PHOTOS_API_KEY">dYQu5f_7Vy3UjqxRlZZx7Kh7uqYQfHlkVd_CHhNFvQw-qYU6c</string>

    <!--map api key-->
    <string name="API_KEY">AIzaSyA5lNyJH60fIJ_u5VLxFrBPZRx7A-qYU6c</string>
    <string name="app_name">PetpatAndroidAppDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="durmy_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s</string>
    <string name="branch_details">Branch details</string>
    <string name="luscious_locks">Luscious Locks</string>
    <string name="open">open</string>
    <string name="_4_5">4.5</string>
    <string name="services">Services</string>
    <string name="professional_beauty">Professional Beauty</string>
    <string name="service">Service</string>
    <string name="view_more">View more</string>
    <string name="_50_00">50.00</string>
    <string name="sr">SR</string>
    <string name="dog_food_chicken_flavor">Dog Food,Chicken Flavor</string>
    <string name="pedigree_adult_dry">Pedigree Adult Dry</string>
    <string name="sunday">Sunday</string>
    <string name="_10_00am">10.00AM</string>
    <string name="_minus">-</string>
    <string name="_6_00pm">6.00PM</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="review_and_ratings">Review and Ratings</string>
    <string name="monalisa">Monalisa</string>
    <string name="_5_0">5.0</string>
    <string name="service_details">Service details</string>
    <string name="braids">Braids</string>
    <string name="close">Close</string>
    <string name="_continue">Continue</string>
    <string name="warning">Warning</string>
    <string name="text_">Pedigree Adult Dry Dog Food, Chicken Flavor</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="ar_rabwah_riyadh_saudi_arabia">Ar Rabwah,Riyadh,Saudi Arabia</string>
    <string name="working_hours">Working Hours</string>
    <string name="car_details">Car details</string>
    <string name="court_street_alabama">Court Street, Alabama</string>
    <string name="product">Product</string>
    <string name="subtotal">Subtotal</string>
    <string name="vat">VAT</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="are_you_sure_logout">Are you sure Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="ashlynn_mango">Ashlynn Mango</string>
    <string name="_05223232434">05223232434</string>
    <string name="review_optional">Review (optional)</string>
    <string name="submit">Submit</string>
    <string name="show_bottomshit_dialog">Show Bottomshit Dialog</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>


    <!--English-->
    <!--Home, Search & Filter section start -->
    <string name="tvExplore">Explore</string>
    <string name="tvOurServices">Our Services</string>
    <string name="tvTopRated">Top Rated</string>
    <string name="tvSeeAll">See all</string>
    <string name="tvNewest">Newest</string>
    <string name="tvExploreBS">Explore</string>
    <string name="tvFavouritesBS">Favourites</string>
    <string name="tvOrdersBS">Orders</string>
    <string name="tvAccountsBS">Accounts</string>
    <string name="tvSelectYourLocation">Select your location</string>
    <string name="tvMap">Map</string>
    <string name="tvFilter">Filter</string>
    <string name="tvReset">Reset</string>
    <string name="tvHowToProvideTheService">How to provide the service</string>
    <string name="tvBranch">Branch</string>
    <string name="tvCar">Car</string>
    <string name="tvFilterByRatings">Filter by ratings</string>
    <string name="tvServices">Services</string>
    <string name="btnApply">Apply</string>
    <!--Home, Search & Filter section end -->

    <!--Forget & reset password section start -->
    <string name="tvForgotPassword">Forgot Password</string>
    <string name="tvForgotPasswordDesc">Please enter your phone no. so we can help you recover your password</string>
    <string name="tvPhoneNumber">Phone number</string>
    <string name="tvSend">Send</string>
    <string name="tvVerification">Verification</string>
    <string name="tvVerificationDesc">Enter your OTP code from your phone we just sent you.</string>
    <string name="tvResendIn">Resend in</string>
    <string name="tvContinue">Continue</string>
    <string name="tvResetPassword">Reset Password</string>
    <string name="tvResetPasswordDesc"> Enter your new password &amp; confirm it</string>
    <string name="tvNewPassword">New Password</string>
    <string name="tvConfirmNewPassword">Confirm New Password</string>
    <string name="btnConfirm">Confirm</string>
    <!--Forget & reset password section end -->


    <!--Notification, Rate & Archives section start -->
    <string name="tvNotifications">Notifications</string>
    <string name="tvPrevious">Previous</string>
    <string name="btnSubmit">Submit</string>
    <string name="tvFavourites">Favourites</string>
    <string name="tvFavouritesDesc">There is no favourite list yet. You can Log in or Register to add favourite SP here.</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnRegister">Register</string>
    <!--Notification, Rate & Archives section end -->


    <!--Checkout section start -->
    <string name="tvCart">Cart</string>
    <string name="tvLusciousLocks">Luscious Locks</string>
    <string name="tvChooseDate">Choose a Date</string>
    <string name="tvChoosePreferredTime">Choose a preferred time</string>
    <string name="btnMorning">Morning</string>
    <string name="btnDay">Day</string>
    <string name="btnNight">Night</string>
    <string name="tvBranchLocation">Branch Location</string>
    <string name="tvAddNote">Add a Note</string>
    <string name="btnAdd">Add</string>
    <string name="tvOrderSummary">Order Summary</string>
    <string name="tvProduct">Product</string>
    <string name="tvSubtotal">Subtotal</string>
    <string name="tvVAT">VAT</string>
    <string name="tvTotal">Total</string>
    <string name="btnProceedToPayments">Proceed to Payments</string>
    <string name="tvDiscount">Discount</string>
    <string name="tvYourOrderHasBeenPlaced">Your order has been placed !</string>
    <string name="tvOrderId">Order ID</string>
    <string name="btnDone">Done</string>
    <!--Checkout section end -->


    <!--Profile & Settings section start -->
    <string name="tvAccounts">Accounts</string>
    <string name="tvAccountsDesc">There is no profile yet. You can Log in or Register to add create your own profile.</string>
    <string name="tvProfile">Profile</string>
    <string name="tvOrdersHistory">Orders History</string>
    <string name="tvOrdersDetails">Orders Details</string>
    <string name="tvChangeLanguage">Change Language</string>
    <string name="tvChangePassword">Change Password</string>
    <string name="tvReportIssue">Report an Issue</string>
    <string name="tvLogout">Logout</string>
    <string name="tvUpdateProfile">Report an Issue</string>
    <string name="tvUpdateProfileDesc">Enter your updated information</string>
    <string name="tvFirstName">First Name</string>
    <string name="tvLastName">Last Name</string>
    <string name="tvPhone">Phone</string>
    <string name="tvEmailOptional">Email (optional)</string>
    <string name="btnUpdate">Update</string>
    <string name="terms_amp_conditions"> Terms &amp; Conditions</string>
    <string name="otpMessage">Enter your OTP code from your \n    phone we just sent you.</string>
    <string name="edit_product">Edit Product</string>
    <string name="desc">There is no order yet. You can Log in
or Register to make an order in a SP.</string>

    <!--Profile & Settings section end-->


</resources>