<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.dialogfragments.OrderDetailsDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dog" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvAshlynnMango"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ashlynn_mango"
            android:textColor="#040D1B"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cvDog"
            app:layout_constraintTop_toTopOf="@+id/cvDog" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/_05223232434"
            android:textColor="#333333"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvAshlynnMango"
            app:layout_constraintTop_toBottomOf="@+id/tvAshlynnMango" />


        <RatingBar
            android:id="@+id/ratingBarId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:numStars="5"
            android:rating="5"
            android:scaleX=".9"
            android:scaleY=".9"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCode" />

        <TextView
            android:id="@+id/tvReviewOptional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:padding="5dp"
            android:text="@string/review_optional"
            android:textColor="#333333"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cvDog"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarId" />

        <EditText
            android:id="@+id/etReview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text_design"
            android:gravity="top"
            android:hint="Lorem ipsum dolor sit amet"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvReviewOptional" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="#51B0ED"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="14dp"
            app:layout_constraintTop_toBottomOf="@+id/etReview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>