<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        tools:context=".ui.fragments.dialogfragments.ExitDialogFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glMiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <TextView
                android:id="@+id/tvAreYouLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="6dp"
                android:text="@string/are_you_sure_logout"
                android:textColor="#040D1B"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#F1F4F9"
                android:padding="5dp"
                android:text="@string/yes_logout"
                android:textColor="#495464"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toStartOf="@+id/glMiddle"
                app:layout_constraintTop_toBottomOf="@+id/tvAreYouLogout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:backgroundTint="#51B0ED"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:layout_constraintStart_toEndOf="@id/glMiddle"
                app:layout_constraintTop_toBottomOf="@+id/tvAreYouLogout"
                app:layout_constraintTop_toTopOf="@+id/btnLogout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>